test SQL parser